# poly_less_than

./: CMakeLists.txt
include/visitors/: poly_less_than.h
scripts/: build.py
tests/: CMakeLists.txt  test_poly_less_than.cpp
